Split cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ enable_testing()
 # Prevents cmake from following symbolic links using GLOB
 cmake_policy(SET CMP0009 NEW)
 
+
 # =================================================================
 # Project variables
 # =================================================================
@@ -17,15 +18,14 @@ set(DAEMON_EXECUTABLE_NAME "blindstore")
 set(DAEMON_SOURCE_DIR "${CMAKE_SOURCE_DIR}/daemon")
 set(DAEMON_MAIN_FILE "${DAEMON_SOURCE_DIR}/main.cpp")
 
-set(CLIENT_LIBRARY_NAME "blindstore_client")
-set(CLIENT_LIBRARY_SOURCE_DIR "${CMAKE_SOURCE_DIR}/client")
-set(CLIENT_LIBRARY_HEADER_DIR "${CMAKE_SOURCE_DIR}/include/client")
-
 
 # =================================================================
 # Project properties
 # =================================================================
 project("${PROJECT_NAME}")
+
+# Include project paths
+include_directories(${CMAKE_SOURCE_DIR})
 
 # Specify build output directories
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
@@ -36,21 +36,6 @@ add_executable(${DAEMON_EXECUTABLE_NAME} ${DAEMON_MAIN_FILE})
 
 
 # =================================================================
-# Client library
+# Subprojects
 # =================================================================
-file(
-    GLOB_RECURSE
-    CLIENT_LIBRARY_SOURCE_FILES
-    "${CLIENT_LIBRARY_SOURCE_DIR}/*.cpp")
-
-add_library(
-    ${CLIENT_LIBRARY_NAME}
-    ${CLIENT_LIBRARY_SOURCE_FILES})
-
-target_include_directories(
-    ${CLIENT_LIBRARY_NAME}
-    PUBLIC
-    ${CLIENT_LIBRARY_HEADER_DIR})
-
-include_directories(
-    "${PROJECT_LIB_DIR}/libshe/include")
+add_subdirectory(client)
